# affinity

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: main.rs
src/: lib.rs  linux.rs  macos.rs  windows.rs
